@@ -38,7 +38,8 @@ TESTS = foo.test
 ## the next line will cause automake to error out:
 TESTS += $(srcdir)/bar.test $(top_srcdir)/baz.test
 .in.test:
-	cp $< $@
+## Account for VPATH issues on weaker make implementations (e.g. IRIX 6.5)
+	cp `test -f $< || echo $(srcdir)/`$< $@
 	chmod +x $@
 check_SCRIPTS = $(TESTS)
 EXTRA_DIST = foo.in foo.test
@@ -57,7 +58,7 @@ AUTOMAKE_fails -a
 grep '(srcdir.*bar' stderr
 grep 'top_srcdir.*baz' stderr
 
-sed '/srcdir/d' < Makefile.am > t
+sed '/^TESTS +=.*srcdir/d' < Makefile.am > t
 mv -f t Makefile.am
 $AUTOMAKE -a
 
