@@ -38,7 +38,8 @@ AUTOMAKE_OPTIONS = subdir-objects
 SUFFIXES = .baz .c
 .baz.c:
 	case $@ in sub/*) $(MKDIR_P) sub;; *) :;; esac
-	cp $< $@
+## Account for VPATH issues on weaker make implementations (e.g. IRIX 6.5)
+	cp `test -f $< || echo $(srcdir)/`$< $@
 
 DISTCLEANFILES = sub/bar.c
 
