@@ -1,5 +1,15 @@
 2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Fix two spurious testsuite failures on IRIX 6.5.
+	* tests/suffix13.test (Makefile.am): Account for VPATH issues on
+	weaker make implementations (e.g. IRIX 6.5).
+	* tests/parallel-tests8.test: Likewise, plus a required related
+	change.
+	Reported by Ralf Wildenhues.  The bugs have been there from the
+	first versions of the affected test scripts.
+
+2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	docs: cygnus mode doesn't require AM_CYGWIN32 macro.
 	* doc/automake.texi (Cygnus): Mode 'cygnus' does not require
 	the AM_CYGWIN32 macro (and indeed hasn't required it since at
